# vfbsocpredictor

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  combined_SOC_data_20250604.xlsx  cycle79-80.xlsx  draw_picture.py  prediction_results.xlsx  pyproject.toml  test.py  train_and_predict.py
.gitee/: ISSUE_TEMPLATE.en.md  PULL_REQUEST_TEMPLATE.en.md
itransfomer SOC model for 20 kWh VFB/: README.md  requirements.txt  run.py  sub.sh
itransfomer SOC model for 20 kWh VFB/data_provider/: data_factory.py  data_loader.py
itransfomer SOC model for 20 kWh VFB/exp/: exp_long_term_forecasting.py
itransfomer SOC model for 20 kWh VFB/results/long_term_forecast_charge_96_96_iTransformer_SOC_ftMS_sl96_ll48_pl96_dm512_nh8_el3_dl1_df512_expand2_dc4_fc3_ebtimeF_dtTrue_Exp_0/: metrics.npy  pred.npy  true.npy
itransfomer SOC model for 20 kWh VFB/scripts/long_term_forecast/Weather_script/: iTransformer.sh
itransfomer SOC model for 20 kWh VFB/utils/: metrics.py
results/: Cycle_16_train_预测结果.csv  Cycle_17_train_预测结果.csv  Cycle_2_train_Prediction_Results.csv  Cycle_43_train_Prediction_Results.csv  Cycle_44_train_Prediction_Results.csv  Cycle_79_test_Prediction_Results.csv  Cycle_80_test_Prediction_Results.csv  soc_iTransformer_model.pth
